-Make website responsive for mobile devices -Add custom scrollbar -Fix bug where nav links disappear in desktop mode

--- a/style.css
+++ b/style.css
@@ -24,13 +24,24 @@
 	box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+	width: 0.5rem;
+	background: rgb(229, 165, 93, 0.2);
+}
+
+::-webkit-scrollbar-thumb {
+	width: 100%;
+	background: var(--color-primary-variant);
+	border-radius: 0.25rem;
+}
+
 html {
 	scroll-behavior: smooth;
 }
 
 body {
 	font-family: 'Montserrat', sans-serif;
-	background: var(--color-bg-3);
+	background: var(--color-bg-3) url('./images/bg-texture.png');
 	color: var(--color-light);
 	line-height: 1.7;
 }
@@ -685,17 +696,125 @@ footer {
 		margin-top: 4rem;
 		height: fit-content;
 	}
+
+	/* ================= EXHIBITIONS ================= */
+	.exhibitions__head p {
+		width: 100%;
+		margin-top: 2rem;
+	}
+
+	.exhibitions__gallery {
+		margin-top: 3rem;
+		gap: 1rem;
+	}
+
+	.exhibitions__gallery article {
+		border: none;
+	}
 }
 
+/* ================= MEDIA QUERIES (small screens) ================= */
+@media screen and (max-width: 1024px) {
+	h1, h2 {
+		font-size: 2rem;
+		line-height: 1.3;
+		color: var(--color-white);
+	}
 
+	header {
+		padding: 0;
+		padding-bottom: 6rem;
+	}
 
+	.header__container {
+		grid-template-columns: 1fr;
+		gap: 1rem;
+		text-align: center;
+	}
 
+	.header__img-lg {
+		width: 80%;
+		height: 20rem;
+		margin: 0 auto;
+		margin-top: 7rem;
+		overflow: hidden;
+		border-radius: 15rem 15rem 0 0;
+	}
 
+	.header__head {
+		justify-content: center;
+	}
 
+	.header__right p {
+		margin-top: 1rem;
+	}
 
+	.header__title {
+		margin-top: 1rem;
+	}
 
+	/* ================= ABOUT ================= */
+	.about__container {
+		grid-template-columns: 1fr;
+		gap: 2rem;
+	}
 
+	.about__right p {
+		width: 100%;
+	}
 
+	.swiper-slide {
+		border: 0;
+	}
 
+	/* ================= GALLERY ================= */
+	#gallery {
+		margin-top: 6rem;
+	}
 
+	.gallery__container p {
+		margin-top: 1rem;
+	}
 
+	.swiper-wrapper {
+		margin-top: 3rem;
+	}
+
+	/* ================= EXHIBITIONS ================= */
+	#exhibitions {
+		margin-top: 6rem;
+	}
+
+	.exhibitions__head {
+		grid-template-columns: 1fr;
+	}
+
+	.exhibitions__head > p {
+		margin-top: 1rem;
+	}
+
+	/*.exhibitions__gallery {
+		display: block;
+	}
+
+	.exhibitions__gallery article {
+		width: 100%;
+		height: fit-content;
+		margin-bottom: 1rem;
+	}*/
+
+	/* ================= FOOTER ================= */
+	.footer__head {
+		flex-direction: column;
+	}
+
+	.footer__head h2 {
+		font-size: 1.5rem;
+	}
+
+	.footer__links {
+		flex-direction: column;
+		gap: 2rem;
+		margin-top: 5rem;
+	}
+}
